# mailslot.js

./: README.md  package-lock.json  package.json
examples/: readme.js
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
