[package]
name = "mailslot-js"
version = "0.1.0"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "mailslot"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.10.1"
mail_slot = "0.1"